# parfive

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  azure-pipelines.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: ci.yml  ci_workflows.yml  publish.yml  release-drafter.yml
asyncdownloader/: downloader.py
changelog/: 15.feature.rst  16.feature  22.feature.rst  25.bugfix.rst  30.bugfix.rst  32.feature.1.rst  32.feature.rst  36.bugfix.rst  37.bugfix.rst  42.bugfix.rst  48.bugfix  48.bugfix.1  49.misc  53.bugfix.rst  54.feature.rst  56.bugfix.rst  58.feature.rst  62.misc.rst  66.feature.rst  README.rst
docs/: changelog.rst  conf.py  index.rst  rendered_changelog.txt  rtd-requirements.txt
docs/static/css/: contributors.css
licenses/: LICENSE.rst
parfive/: __init__.py  config.py  conftest.py  downloader.py  main.py  results.py  state.py  utils.py  version.py
parfive/tests/: localserver.py  simple_download_test.ipynb  test_aiofiles.py  test_config.py  test_downloader.py  test_downloader_multipart.py  test_main.py  test_sample.py  test_utils.py
