diff a/pyproject.toml b/pyproject.toml	(rejected hunks)
@@ -1,10 +1,8 @@
 [build-system]
 requires = [
+  "setuptools>=62.1",
   "setuptools_scm[toml]>=6.2",
-  "wheel"
-]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -13,14 +11,10 @@ description = "A HTTP and FTP parallel file downloader."
 readme = "README.rst"
 requires-python = ">=3.9"
 license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
-
 authors = [
   { name = "Stuart Mumford", email = "stuart@cadair.com" },
 ]
-
-dependencies = []
 dynamic = ["version"]
 
 [project.optional-dependencies]
@@ -34,13 +28,9 @@ docs = [
     "tomli; python_version <\"3.11\"",
 ]
 
 [project.urls]
 repository = "https://parfive.readthedocs.io/"
 
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
@@ -48,11 +38,8 @@ include-package-data = true
 [tool.setuptools.packages.find]
 
 [tool.setuptools_scm]
 write_to = "parfive/version.py"

 [tool.pytest.ini_options]
 testpaths = [
   "parfive",
