[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "parfive"
description = "A HTTP and FTP parallel file downloader."
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
authors = [
  { name = "Stuart Mumford", email = "stuart@cadair.com" },
]
dependencies = [
  "tqdm >=4.27.0",
  "aiohttp",
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
parfive = "parfive.main:main"

[project.optional-dependencies]
ftp = [
    "aioftp >=0.17.1",
]
tests = [
    "pytest",
    "pytest-localserver",
    "pytest-asyncio",
    "pytest-socket",
    "pytest-cov",
    "aiofiles",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx-autodoc-typehints",
    "sphinx-contributors",
    "sphinx-book-theme",
]

[project.urls]
repository = "https://parfive.readthedocs.io/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["parfive*"]

[tool.setuptools_scm]
version_file = "parfive/_version.py"
