[metadata]
name = parfive
description = A HTTP and FTP parallel file downloader.
long_description = file: README.rst
url = https://parfive.readthedocs.io/
license = MIT
author = "Stuart Mumford"
author_email = "stuart@cadair.com"
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7
install_requires =
  tqdm
  aiohttp
setup_requires =
  setuptools_scm
packages = find:

[options.entry_points]
console_scripts =
    parfive = parfive.main:main

[options.extras_require]
ftp = aioftp>=0.17.1
test =
  pytest
  pytest-localserver
  pytest-asyncio
  pytest-socket
  pytest-cov
docs =
  sunpy-sphinx-theme
  sphinx-automodapi

[flake8]
max-line-length = 100
ignore = I100,I101,I102,I103,I104,I201

[tool:pytest]
addopts = --allow-hosts=127.0.0.1,::1

[coverage:run]
source = parfive
omit =
   parfive/conftest.py
   parfive/*setup*
   parfive/tests/*
   parfive/__init__*
