[metadata]
name = parfive
description = A HTTP and FTP parallel file downloader.
long_description = file: README.rst
url = https://parfive.readthedocs.io/
license = MIT
author = "Stuart Mumford"
author_email = "stuart@cadair.com"
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10


[options]
python_requires = >=3.7
install_requires =
  tqdm >= 4.27.0
  aiohttp
setup_requires =
  setuptools_scm
packages = find:

[options.entry_points]
console_scripts =
    parfive = parfive.main:main

[options.extras_require]
ftp = aioftp>=0.17.1
tests =
  pytest
  pytest-localserver
  pytest-asyncio
  pytest-socket
  pytest-cov
  aiofiles
docs =
  sphinx
  sphinx-automodapi
  sunpy-sphinx-theme

[flake8]
max-line-length = 100
ignore = I100,I101,I102,I103,I104,I201

[tool:pytest]
addopts = --allow-hosts=127.0.0.1,::1
asyncio_mode = strict

[isort]
profile = black
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = parfive
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
   parfive/__init__*
   parfive/_dev/*
   parfive/*setup*
   parfive/conftest.py
   parfive/tests/*
   parfive/version.py
   */parfive/__init__*
   */parfive/_dev/*
   */parfive/*setup*
   */parfive/conftest.py
   */parfive/tests/*
   */parfive/version.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
