[metadata]
name = parfive
author = Cadair
author_email = stu@cadair.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = parfive.com
description = A things of things
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
parfive = data/*

[tool:pytest]
testpaths = "parfive" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  parfive/__init*
  parfive/conftest.py
  parfive/*setup_package*
  parfive/tests/*
  parfive/*/tests/*
  parfive/extern/*
  parfive/version*
  */parfive/__init*
  */parfive/conftest.py
  */parfive/*setup_package*
  */parfive/tests/*
  */parfive/*/tests/*
  */parfive/extern/*
  */parfive/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
